# py-email-reservation-confirmation

./: .gitignore  cloudbuild.yaml  cmdline.py  func_test_main.py  funct_test_rst+mail.py  funct_test_rst.py  mail.py  main.py  pyproject.toml  rst.py  test_main.py
res/: canceled_reservation_en.rst  confirmed_reservation_en.rst  confirmed_reservation_fr.rst  confirmed_reservation_title_fr.txt  waiting_reservation_en.rst
templates/: confirmed_reservation_en.rst  confirmed_reservation_fr.rst
