[tool.poetry]
name = "email-reservation-confirmation"
version = "1.0.0"
description = ""
authors = ["Alyosha <alyosha@30emeciel.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
core = { git = "https://github.com/30emeciel/py-core.git", branch="v2"}
python-box = "^5.3.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.17.0"
pytest = "^6.2.3"
pytest-mockito = "^0.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
